<resources>
    <string name="app_name">DermAI</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="start_new_case">Start new case</string>
    <string name="history">History</string>
    <string name="search__">Search...</string>
    <string name="recent">Recent</string>
    <string name="email">Email</string>
    <string name="email__">Email:</string>
    <string name="age__">Age:</string>
    <string name="skin_color__">Skin Color:</string>
    <string name="skin_type__">Skin Type:</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="select_image">Select image</string>
    <string name="username">Username</string>
    <string name="forgot_password_underlined"><u>Forgot Password?</u></string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="not_granted">Can\'t use camera without permission</string>
    <string name="scan_image">Scan image</string>
    <string name="select_another_image">Select another image</string>
    <string name="app_has_identified_the_following_matches_n_tap_each_one_to_see_more_images_and_take_action">App has identified the following matches.\n Tap each one to see more images and take action</string>
    <string name="confirm">Confirm</string>
    <string name="more__"><![CDATA[More >]]></string>
    <string name="please_wait_while_your_image_been_processed">Please wait while your image been processed...</string>
    <string name="skin_disease">Skin Disease</string>
    <string name="description__">Description:</string>
    <string name="self_care__">Self Care:</string>
    <string name="adds__">Adds:</string>
    <string name="section__">Section:</string>
    <string name="dummy_long_text">fasf safj afjsd iojfa dsjfi asdfijdsif jdiasd fisidf jdisofj sdijfpasdjf isdfjpdsjfiasdj dijf dtuja8rth dscnfdsfuedth yhsfgjasdphfbanpdfhau pyhr [ajsg</string>
    <string name="get_medicines">Get Medicines</string>
    <string name="medicines">Medicines</string>
    <string name="get_a_doctor">Get a Doctor</string>
    <string name="start">Start</string>
    <string name="logout">Logout</string>
    <string name="confirmed">Confirmed</string>
    <string name="symptoms__">Symptoms:</string>
    <string name="precautions__">Precautions:</string>
    <string name="contact_your_doctor_through_our_app">Contact your doctor through our app</string>
    <string name="contact">Contact</string>
    <string name="no_result_found">No result found!</string>
    <string name="get_offers_using_app_coupons">Get offers using app coupons</string>
    <string name="category_1">Category 1</string>
    <string name="get">Get</string>
    <string name="category_2">Category 2</string>
    <string name="insert_data">Please insert you data blow</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_age">Enter Age</string>
    <string name="select_your_skin_color">Select Your Skin Color</string>
    <string name="additional_details">Additional Details</string>
    <string name="select_skin_type">Select Skin Type</string>
    <string name="submit">Submit</string>
    <string name="done">Done</string>
    <string name="gender">Gender</string>
</resources>